--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -1,3 +1,21 @@
-## title
+## Using react.js
 
-### sub 
+The `react.js` file is the core file needed to create react elements and write react components.
+
+```
+"use strict";
+
+var HelloMessage = React.createClass({
+  displayName: "HelloMessage",
+
+  render: function render() {
+    return React.createElement(
+      "div",
+      null,
+      "Hello ",
+      this.props.name
+    );
+  }
+});
+
+```
