--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -2,7 +2,7 @@
 
 The `react.js` file is the core file needed to create react elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js`. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of using React in a simple HTML page is shown below.
 
-```
+```html
 <!DOCTYPE html>
 <html>
 <body>
@@ -16,4 +16,4 @@ The `react.js` file is the core file needed to create react elements and write r
 
 #### Notes
 
-* An alternative `react.js` file called `react-with-addons.js` is available [containing a collection of utility modules](https://facebook.github.io/react/docs/addons.html) for building React applications.
+* An alternative `react.js` file called `react-with-addons.js` is available [containing a collection of utility modules](https://facebook.github.io/react/docs/addons.html) for building React applications. The "addons" file can be used in place of the `react.js` file.
