--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -1,6 +1,6 @@
 ## Using `react.js` and `react-dom.js` in an HTML page
 
-The `react.js` file is the core file needed to create react elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js`. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of using React in a simple HTML page is shown below.
+The `react.js` file is the core file needed to create react elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of using React in a simple HTML page is shown below.
 
 ```html
 <!DOCTYPE html>
@@ -12,7 +12,35 @@ The `react.js` file is the core file needed to create react elements and write r
 </html>
 ```
 
+With the `react.js` file and `react-dom.js` file loaded it is possible to create React elements/components.
 
+```html
+<!DOCTYPE html>
+<html>
+<body>
+<script src="https://fb.me/react-0.14.4.js"></script>
+<script src="https://fb.me/react-dom-0.14.4.js"></script>
+<script>
+"use strict";
+
+var HelloMessage = React.createClass({
+  displayName: "HelloMessage",
+
+  render: function render() {
+    return React.createElement(
+      "div",
+      null,
+      "Hello ",
+      this.props.name
+    );
+  }
+});
+
+ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.body);
+</script>
+</body>
+</html>
+```
 
 #### Notes
 
