--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -12,7 +12,7 @@ The `react.js` file is the core file needed to create react elements and write r
 </html>
 ```
 
-With the `react.js` file and `react-dom.js` file loaded it is possible to create React elements/components.
+With the `react.js` file and `react-dom.js` file loaded into an HTML page it is then possible to create React elements/components.
 
 ```html
 <!DOCTYPE html>
@@ -21,7 +21,7 @@ With the `react.js` file and `react-dom.js` file loaded it is possible to create
 <script src="https://fb.me/react-0.14.4.js"></script>
 <script src="https://fb.me/react-dom-0.14.4.js"></script>
 <script>
-"use strict";
+document.body.innerHTML = '<div id="app"></div>';
 
 var HelloMessage = React.createClass({
   displayName: "HelloMessage",
@@ -35,8 +35,7 @@ var HelloMessage = React.createClass({
     );
   }
 });
-
-ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.body);
+ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 </script>
 </body>
 </html>
