--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -5,9 +5,11 @@ The `react.js` file is the core file needed to create react elements and write r
 ```html
 <!DOCTYPE html>
 <html>
+  <head>
+    <script src="https://fb.me/react-0.14.4.js"></script>
+    <script src="https://fb.me/react-dom-0.14.4.js"></script>
+  </head>
 <body>
-<script src="https://fb.me/react-0.14.4.js"></script>
-<script src="https://fb.me/react-dom-0.14.4.js"></script>
 </body>
 </html>
 ```
@@ -17,29 +19,26 @@ With the `react.js` file and `react-dom.js` file loaded into an HTML page it is 
 ```html
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="https://fb.me/react-0.14.4.js"></script>
+        <script src="https://fb.me/react-dom-0.14.4.js"></script>
+    </head>
 <body>
-<script src="https://fb.me/react-0.14.4.js"></script>
-<script src="https://fb.me/react-dom-0.14.4.js"></script>
-<script>
-document.body.innerHTML = '<div id="app"></div>';
-
-var HelloMessage = React.createClass({
-  displayName: "HelloMessage",
-
-  render: function render() {
-    return React.createElement(
-      "div",
-      null,
-      "Hello ",
-      this.props.name
-    );
-  }
-});
-ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
-</script>
+    <div id="app"></div>
+    <script>
+        var HelloMessage = React.createClass({
+            displayName: 'HelloMessage',
+            render: function render() {
+                return React.createElement('div',null,'Hello ',this.props.name);
+            }
+        });
+        ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+    </script>
 </body>
 </html>
 ```
+
+This setup is all you need to use React. However this setup does not make use of JSX.
 
 #### Notes
 
