--- a/react-setup/1.2.md
+++ b/react-setup/1.2.md
@@ -1,2 +1,51 @@
 ## Using JSX via Babel
 
+The creation of the `HelloMessage` component was done using the `React.createElement` function in the code example below.
+
+```html
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="https://fb.me/react-0.14.4.js"></script>
+        <script src="https://fb.me/react-dom-0.14.4.js"></script>
+    </head>
+<body>
+    <div id="app"></div>
+    <script>
+        var HelloMessage = React.createClass({
+            displayName: 'HelloMessage',
+            render: function render() {
+                return React.createElement('div',null,'Hello ',this.props.name);
+            }
+        });
+        ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+    </script>
+</body>
+</html>
+```
+
+By using JSX via Babel it is possible to to simplify the creation of React components. 
+
+Instead of writing this:
+
+```javascript
+        var HelloMessage = React.createClass({
+            displayName: 'HelloMessage',
+            render: function render() {
+                return React.createElement('div',null,'Hello ',this.props.name);
+            }
+        });
+        ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+```
+
+Using JSX vis Babel you can write this:
+
+```javascript
+var HelloMessage = React.createClass({
+    render: function() {
+        return <div>Hello {this.props.name}</div>;
+    }
+});
+
+ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+```       
