--- a/react-setup/1.1.md
+++ b/react-setup/1.1.md
@@ -1,6 +1,6 @@
 ## Using `react.js` and `react-dom.js` in an HTML page
 
-The `react.js` file is the core file needed to create react elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of using React in a simple HTML page is shown below.
+The `react.js` file is the core file needed to create React elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent on the the `react.js` file and must be included after first including the `react.js` file. An example of using React in a simple HTML page is shown below.
 
 ```html
 <!DOCTYPE html>
