--- a/react-setup/1.2.md
+++ b/react-setup/1.2.md
@@ -1,6 +1,6 @@
 ## Using JSX via Babel
 
-The creation of the `HelloMessage` component was done using the `React.createElement` function in the code example below.
+The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function.
 
 ```html
 <!DOCTYPE html>
@@ -29,16 +29,16 @@ By using JSX via Babel it is possible to to simplify the creation of React compo
 Instead of writing this:
 
 ```javascript
-        var HelloMessage = React.createClass({
-            displayName: 'HelloMessage',
-            render: function render() {
-                return React.createElement('div',null,'Hello ',this.props.name);
-            }
-        });
-        ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+var HelloMessage = React.createClass({
+    displayName: 'HelloMessage',
+    render: function render() {
+        return React.createElement('div',null,'Hello ',this.props.name);
+    }
+});
+ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
 ```
 
-Using JSX vis Babel you can write this:
+Using JSX, via Babel, you can write this:
 
 ```javascript
 var HelloMessage = React.createClass({
@@ -48,4 +48,3 @@ var HelloMessage = React.createClass({
 });
 
 ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
-```       
