--- a/react-setup/1.2.md
+++ b/react-setup/1.2.md
@@ -1,6 +1,6 @@
 ## Using JSX via Babel
 
-The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function.
+The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function and plain ES5 JavaScript.
 
 ```html
 <!DOCTYPE html>
@@ -24,7 +24,7 @@ The creation of the `HelloMessage` component in the HTML page below was done usi
 </html>
 ```
 
-By using JSX via Babel it is possible to to simplify the creation of React components. 
+Optionally, by using JSX via Babel, it is possible to simplify the creation of React components.
 
 Instead of writing this:
 
@@ -48,3 +48,29 @@ var HelloMessage = React.createClass({
 });
 
 ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+```
+
+And then Babel will convert it back to this:
+
+```javascript
+var HelloMessage = React.createClass({
+    displayName: 'HelloMessage',
+    render: function render() {
+        return React.createElement('div',null,'Hello ',this.props.name);
+    }
+});
+ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+```
+
+Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step by Babel into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`) first shown in this section.
+
+More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional convenience abstraction for creating React elements/components.
+
+## Transforming JSX via Babel in the browser 
+
+Normally, Babel is setup to automatically process your JavaScript files during development. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. Having Babel transformations occurring in the Browser while possible shouldn't be consider a production solution.
+
+## Transforming JSX via Babel during development
+
+
+
