--- a/react-setup/1.2.md
+++ b/react-setup/1.2.md
@@ -1,6 +1,6 @@
-## Using JSX via Babel
+# Using JSX via Babel
 
-The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function and plain ES5 JavaScript.
+The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function and plain ES5 JavaScript. This should look familiar from the previous section in this chapter.
 
 ```html
 <!DOCTYPE html>
@@ -24,7 +24,7 @@ The creation of the `HelloMessage` component in the HTML page below was done usi
 </html>
 ```
 
-Optionally, by using JSX via Babel, it is possible to simplify the creation of React components.
+Optionally, by using JSX via Babel, it is possible to simplify the creation of React components by abstracting the JavaScript syntax so that it can be written in a more natural HTML like tag style.
 
 Instead of writing this:
 
@@ -62,15 +62,43 @@ var HelloMessage = React.createClass({
 ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
 ```
 
-Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step by Babel into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`) first shown in this section.
+Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`) first shown in this section.
 
-More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional convenience abstraction for creating React elements/components.
+More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements/components. And I believe it is fair to say that most developers when using React use it.
 
-## Transforming JSX via Babel in the browser 
+## Transforming JSX via Babel in the browser
 
-Normally, Babel is setup to automatically process your JavaScript files during development. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. Having Babel transformations occurring in the Browser while possible shouldn't be consider a production solution.
+Normally, Babel is setup to automatically process your JavaScript files during development using CLI tools, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include.
 
-## Transforming JSX via Babel during development
+The Babel project unfortunately, as of Babel 6, will no longer provide the script file needed (i.e `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e. 5.8.23).
+
+### Using Babel core 5.8.23 `browser.js`
+
+```html
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="https://fb.me/react-0.14.4.js"></script>
+        <script src="https://fb.me/react-dom-0.14.4.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    </head>
+<body>
+    <div id="app"></div>
+    <script>
+        var HelloMessage = React.createClass({
+            render: function() {
+                return <div>Hello {this.props.name}</div>;
+            }
+        });
+
+        ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+    </script>
+</body>
+</html>
+```
+
+
+You should be aware that the code examples used in this book via jsFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code.
 
 
 
