--- a/react-setup/1.2.md
+++ b/react-setup/1.2.md
@@ -84,7 +84,7 @@ The Babel project unfortunately, as of Babel 6, will no longer provide the scrip
     </head>
 <body>
     <div id="app"></div>
-    <script>
+    <script type="text/babel">
         var HelloMessage = React.createClass({
             render: function() {
                 return <div>Hello {this.props.name}</div>;
@@ -96,7 +96,6 @@ The Babel project unfortunately, as of Babel 6, will no longer provide the scrip
 </body>
 </html>
 ```
-
 
 You should be aware that the code examples used in this book via jsFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code.
 
