--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -101,5 +101,6 @@ In the HTML file below the React code we have been working with to create a Hell
 
 You should be aware that the code examples used in this book via jsFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code. In other words, jsFiddle is pretty much doing what you see in the HTML file above when running React code in a jsFiddle.
 
+#### Notes
 
-
+* The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code.
