--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -4,7 +4,86 @@ Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX tr
 
 Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES* code.
 
+In the HTML page below the familiar `HelloMessage` component has been re-written to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). So, not only is Babel transforming the JSX syntax, it is also transforming ES6 syntax to ES5 syntax.
 
+```html
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="https://fb.me/react-0.14.4.js"></script>
+        <script src="https://fb.me/react-dom-0.14.4.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    </head>
+<body>
+    <div id="app"></div>
+    <script type="text/babel">
+        class HelloMessage extends React.Component {
+            render(){
+                return <div>Hello {this.props.name}</div>;
+            }
+        };
+
+        ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+    </script>
+</body>
+</html>
+```
+
+In the above HTML document Babel is taking in:
+
+```javascript
+        class HelloMessage extends React.Component {
+            render(){
+                return <div>Hello {this.props.name}</div>;
+            }
+        };
+
+        ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+```
+
+And transforming it to this:
+
+```javascript
+"use strict";
+
+var _createClass = (function () { function defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } } return function (Constructor, protoProps, staticProps) { if (protoProps) defineProperties(Constructor.prototype, protoProps); if (staticProps) defineProperties(Constructor, staticProps); return Constructor; }; })();
+
+var _get = function get(_x, _x2, _x3) { var _again = true; _function: while (_again) { var object = _x, property = _x2, receiver = _x3; _again = false; if (object === null) object = Function.prototype; var desc = Object.getOwnPropertyDescriptor(object, property); if (desc === undefined) { var parent = Object.getPrototypeOf(object); if (parent === null) { return undefined; } else { _x = parent; _x2 = property; _x3 = receiver; _again = true; desc = parent = undefined; continue _function; } } else if ("value" in desc) { return desc.value; } else { var getter = desc.get; if (getter === undefined) { return undefined; } return getter.call(receiver); } } };
+
+function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
+
+function _inherits(subClass, superClass) { if (typeof superClass !== "function" && superClass !== null) { throw new TypeError("Super expression must either be null or a function, not " + typeof superClass); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, enumerable: false, writable: true, configurable: true } }); if (superClass) Object.setPrototypeOf ? Object.setPrototypeOf(subClass, superClass) : subClass.__proto__ = superClass; }
+
+var HelloMessage = (function (_React$Component) {
+    _inherits(HelloMessage, _React$Component);
+
+    function HelloMessage() {
+        _classCallCheck(this, HelloMessage);
+
+        _get(Object.getPrototypeOf(HelloMessage.prototype), "constructor", this).apply(this, arguments);
+    }
+
+    _createClass(HelloMessage, [{
+        key: "render",
+        value: function render() {
+            return React.createElement(
+                "div",
+                null,
+                "Hello ",
+                this.props.name
+            );
+        }
+    }]);
+
+    return HelloMessage;
+})(React.Component);
+
+;
+
+ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
+```
+
+Which the browser is parsing.
 
 #### Notes
 
