--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -1,6 +1,6 @@
 ## Using ES6 & ES* with React
 
-Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES* code and transforms it to run in browsers that don't support ES* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When it is doing these ECMAScript transformations it is also possible to configure [Babel with a React preset](http://babeljs.io/docs/plugins/preset-react/) to additionally transform JSX into createElement calls. This is what we examined in the previous section.
+Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES* code and transforms it to run in browsers that don't support ES* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When it is doing these ECMAScript transformations it is also possible to configure [Babel with a React preset](http://babeljs.io/docs/plugins/preset-react/) to additionally transform JSX into `createElement` calls. This is what we examined in the previous section.
 
 Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES* code.
 
@@ -83,8 +83,8 @@ var HelloMessage = (function (_React$Component) {
 ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 ```
 
-Which the browser is parsing.
+Which can then be used in ES5 browsers.
 
 #### Notes
 
-* Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX.
+* Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES* and JSX transforming.
