--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -99,7 +99,7 @@ In the HTML file below the React code we have been working with to create a Hell
 </html>
 ```
 
-You should be aware that the code examples used in this book via jsFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code. In other words, jsFiddle is pretty much doing what you see in the HTML file above when running React code in a jsFiddle.
+You should be aware that the code examples used in this book via JSFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code. In other words, JSFiddle is pretty much doing what you see in the HTML file above when running React code in a JSFiddle.
 
 #### Notes
 
