--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -1,3 +1,7 @@
-## Writing React with jsfiddle
+## Writing React with JSFiddle
 
-### sub 
+The basic setup that has been describe in this chapter can also be used online via JSfiddle. While JSFiddle does not make it obvious, JSFiddle uses the same three resources we have in this chapter to write React coding using JSX.
+
+Below you will see a 
+
+[source code](https://jsfiddle.net/bvpe4j39/#height=600)
