--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -85,6 +85,8 @@ ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.ge
 
 Which can then be used in ES5 browsers.
 
+Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel Babel 5.8.23 (i.e. [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
+
 #### Notes
 
 * Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES* and JSX transforming.
