--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -1,7 +1,11 @@
 ## Writing React with JSFiddle
 
-The basic setup that has been describe in this chapter can also be used online via JSfiddle. While JSFiddle does not make it obvious, JSFiddle uses the same three resources we have in this chapter to write React coding using JSX.
+The basic setup that has been describe in this chapter can also be used online via JSfiddle. While JSFiddle does not make it obvious, JSFiddle uses the same three resources (react.js, react-dom.js, and babel) we have in this chapter to write React coding using JSX and ES6 features.
 
-Below you will see a 
+Below is an embedded JSFiddle containing the the `HelloMessage` component that you can edit.
 
 [source code](https://jsfiddle.net/bvpe4j39/#height=600)
+
+It will be assumed that after reading this chapter that you understand a basic React+Babel setup and while JSFiddle does not make it obvious this is the same setup being used in JSFiddle.
+
+This is important to understand because JSFiddle will be used through out this book.
