--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -1,11 +1,13 @@
 ## Writing React with JSFiddle
 
-The basic setup that has been describe in this chapter can also be used online via JSfiddle. While JSFiddle does not make it obvious, JSFiddle uses the same three resources (react.js, react-dom.js, and babel) we have in this chapter to write React coding using JSX and ES6 features.
+The basic setup that has been describe in this chapter can also be used online via JSfiddle. JSFiddle uses the same three resources (`react.js`, `react-dom.js`, and `browser.js`) we have in this chapter to make writing React code in JSFiddle possible.
 
-Below is an embedded JSFiddle containing the the `HelloMessage` component that you can edit.
+Below is an embedded JSFiddle containing the `HelloMessage` component that you can edit.
 
 [source code](https://jsfiddle.net/bvpe4j39/#height=600)
 
-It will be assumed that after reading this chapter that you understand a basic React+Babel setup and while JSFiddle does not make it obvious this is the same setup being used in JSFiddle.
+Note the the "Babel" tab indicates the the JavaScript written in this tab will be transformed by Babel. As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` file.
 
-This is important to understand because JSFiddle will be used through out this book.
+It will be assumed that after reading this chapter that you understand a basic React+Babel setup, and while JSFiddle does not make it obvious, this is the same setup being used by JSFiddle's that run React code.
+
+This is important to understand because JSFiddle will be used through out this book and I wanted to make sure that a basic understanding of how React code and Babel code make it possible to write React using JSX and ES6 features.
