--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -2,12 +2,12 @@
 
 The basic setup that has been describe in this chapter can also be used online via JSfiddle. JSFiddle uses the same three resources (`react.js`, `react-dom.js`, and `browser.js`) we have in this chapter to make writing React code in JSFiddle possible.
 
-Below is an embedded JSFiddle containing the `HelloMessage` component that you can edit.
+Below is an embedded JSFiddle containing the `HelloMessage` component used throughout this chapter. By clicking on the "results" tab you can view the React component rendered to the DOM. To edit the code just click on "edit with JSFiddle".
 
 [source code](https://jsfiddle.net/bvpe4j39/#height=600)
 
-Note the the "Babel" tab indicates the the JavaScript written in this tab will be transformed by Babel. As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` file.
+Note that the "Babel" tab indicates the JavaScript written into this tab will be transformed by Babel. As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` files.
 
-It will be assumed that after reading this chapter that you understand a basic React+Babel setup, and while JSFiddle does not make it obvious, this is the same setup being used by JSFiddle's that run React code.
+It will be assumed that after reading this chapter that you understand a basic React+Babel setup, and while JSFiddle does not make it obvious, this is the same setup being used by JSFiddle to run React code.
 
-This is important to understand because JSFiddle will be used through out this book and I wanted to make sure that a basic understanding of how React code and Babel code make it possible to write React using JSX and ES6 features.
+JSFiddle will be used through out this rest of this book to show the results of React code as it would be parsed by a browser.
