--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -90,3 +90,4 @@ Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few 
 #### Notes
 
 * Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES* and JSX transforming.
+* Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
