--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -104,3 +104,10 @@ You should be aware that the code examples used in this book via JSFiddle will b
 #### Notes
 
 * The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code.
+* By using JSX:
+    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar that JavaScript alone.
+    * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
+    * The compiler will find errors in your HTML you might otherwise miss.
+    * JSX promotes the idea of inline styles. Which can be a very good thing.
+
+
