--- a/react-basic-setup/1.1.md
+++ b/react-basic-setup/1.1.md
@@ -14,7 +14,7 @@ The `react.js` file is the core file needed to create React elements and write r
 </html>
 ```
 
-With the `react.js` file and `react-dom.js` file loaded into an HTML page it is then possible to create React elements/components and then render them to the DOM.
+With the `react.js` file and `react-dom.js` file loaded into an HTML page it is then possible to create React elements/components and then render them to the DOM. In the HTML below a `HelloMessage` React component is created containing a React `<div>` element that is rendered to the DOM inside of the <div id="app"></div> HTML element.
 
 ```html
 <!DOCTYPE html>
@@ -38,7 +38,7 @@ With the `react.js` file and `react-dom.js` file loaded into an HTML page it is 
 </html>
 ```
 
-This setup is all you need to use React. However this setup does not make use of JSX.   
+This setup is all you need to use React. However this setup does not make use of JSX. The next section will introduce JSX.   
 
 #### Notes
 
