--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -1,6 +1,6 @@
 # Using JSX via Babel
 
-The creation of the `HelloMessage` component in the HTML page below was done using the `React.createElement` function and plain ES5 JavaScript. This should look familiar from the previous section in this chapter.
+The creation of the React `HelloMessage` component and React `<div>` element in the HTML page below was done using the `React.createClass()` and `React.createElement()` function. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
 
 ```html
 <!DOCTYPE html>
@@ -24,9 +24,9 @@ The creation of the `HelloMessage` component in the HTML page below was done usi
 </html>
 ```
 
-Optionally, by using JSX via Babel, it is possible to simplify the creation of React components by abstracting the JavaScript function calls so that it can be written in a more natural HTML like tag style.
+Optionally, by using JSX via Babel, it is possible to simplify the creation of React elements by abstracting the `React.createElement()` JavaScript function calls so that it can be written in a more natural HTML like style and syntax.
 
-Instead of writing this:
+Instead of writing this, using `React.createElement()`:
 
 ```javascript
 var HelloMessage = React.createClass({
@@ -50,7 +50,7 @@ var HelloMessage = React.createClass({
 ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
 ```
 
-And then Babel will convert it back to this:
+And then Babel will convert it back to this so it will run in ES5 browsers:
 
 ```javascript
 var HelloMessage = React.createClass({
@@ -64,17 +64,17 @@ ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.get
 
 Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`) first shown in this section.
 
-More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements/components. And I believe it is fair to say that most developers when using React use it.
+More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements and it won't run in ES5 browsers with being first transformed by Babel to do so.
 
 ## Transforming JSX via Babel in the browser
 
-Normally, Babel is setup to automatically process your JavaScript files during development using CLI tools, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include.
+Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn react.
 
-The Babel project unfortunately, as of Babel 6, will no longer provide the script file needed (i.e `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e. 5.8.23).
+The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e. 5.8.23) that does provide this needed file (i.e `browser.js`) for transforming JSX/ES* in the browser.
 
-### Using Babel core 5.8.23 `browser.js`
+### Using `browser.js` (Babel 5.8.23) to transform JSX in the browser
 
-In the HTML file below the React code we have been working with to create a HelloMessage component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the script element running the React code a `type` attribute of `type="text/babel"`.
+In the HTML file below the React code we have been working with to create the `HelloMessage` component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the script element running the React code a `type` attribute of `type="text/babel"`.
 
 ```html
 <!DOCTYPE html>
@@ -99,7 +99,7 @@ In the HTML file below the React code we have been working with to create a Hell
 </html>
 ```
 
-You should be aware that the code examples used in this book via JSFiddle will be using the `browser.js` file and thus Babel 5.8.23 to transform JSX into ES5 code. In other words, JSFiddle is pretty much doing what you see in the HTML file above when running React code in a JSFiddle.
+You should be aware that the code examples used in this book via JSFiddle will be using the `browser.js` (Babel 5.8.23) to transform JSX into ES5 code. In other words, JSFiddle is pretty much doing what you see in the HTML file above when running React code.
 
 #### Notes
 
