--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -1,6 +1,6 @@
 ## Using ES6 & ES* with React
 
-Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES* code and transforms it to run in browsers that don't support ES* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When it is doing these ECMAScript transformations it is also possible to configure [Babel with a React preset](http://babeljs.io/docs/plugins/preset-react/) to additionally transform JSX into `createElement` calls. This is what we examined in the previous section.
+Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES* code and transforms it to run in browsers that don't support ES* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expression into `createElement` calls. This is what we examined in the previous section.
 
 Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES* code.
 
@@ -17,6 +17,7 @@ In the HTML page below the familiar `HelloMessage` component has been re-written
 <body>
     <div id="app"></div>
     <script type="text/babel">
+    
         class HelloMessage extends React.Component {
             render(){
                 return <div>Hello {this.props.name}</div>;
@@ -24,6 +25,15 @@ In the HTML page below the familiar `HelloMessage` component has been re-written
         };
 
         ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+
+        /*** PREVIOUSLY ***/
+        /*var HelloMessage = React.createClass({
+            render: function() {
+                return <div>Hello {this.props.name}</div>;
+            }
+        });
+
+        ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));*/
     </script>
 </body>
 </html>
