--- a/react-basic-setup/1.4.md
+++ b/react-basic-setup/1.4.md
@@ -4,7 +4,7 @@ The basic setup that has been describe in this chapter can also be used online v
 
 Below is an embedded JSFiddle containing the `HelloMessage` component used throughout this chapter. By clicking on the "results" tab you can view the React component rendered to the DOM. To edit the code just click on "edit with JSFiddle".
 
-[source code](https://jsfiddle.net/bvpe4j39/#height=600)
+[source code](https://jsfiddle.net/bvpe4j39/)
 
 Note that the "Babel" tab indicates the JavaScript written into this tab will be transformed by Babel. As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` files.
 
