--- a/react-basic-setup/1.2.md
+++ b/react-basic-setup/1.2.md
@@ -1,6 +1,6 @@
 # Using JSX via Babel
 
-The creation of the React `HelloMessage` component and React `<div>` element in the HTML page below was done using the `React.createClass()` and `React.createElement()` function. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
+The creation of the React `HelloMessage` component and React `<div>` element in the HTML page below was done using the `React.createClass()` and `React.createElement()` functions. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
 
 ```html
 <!DOCTYPE html>
@@ -26,55 +26,37 @@ The creation of the React `HelloMessage` component and React `<div>` element in 
 
 Optionally, by using JSX via Babel, it is possible to simplify the creation of React elements by abstracting the `React.createElement()` JavaScript function calls so that it can be written in a more natural HTML like style and syntax.
 
-Instead of writing this, using `React.createElement()`:
+Instead of writing the following, which uses `React.createElement()`:
 
 ```javascript
-var HelloMessage = React.createClass({
-    displayName: 'HelloMessage',
-    render: function render() {
-        return React.createElement('div',null,'Hello ',this.props.name);
-    }
-});
-ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
+
+return React.createElement('div',null,'Hello ',this.props.name);
+
 ```
 
-Using JSX, via Babel, you can write this:
+Using JSX, you can write this:
 
 ```javascript
-var HelloMessage = React.createClass({
-    render: function() {
-        return <div>Hello {this.props.name}</div>;
-    }
-});
 
-ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+return <div>Hello {this.props.name}</div>;
+
 ```
 
-And then Babel will convert it back to this so it will run in ES5 browsers:
+And then Babel will convert it back to the code which uses `React.createElement()` so it can be parsed by a JavaScript engine.
 
-```javascript
-var HelloMessage = React.createClass({
-    displayName: 'HelloMessage',
-    render: function render() {
-        return React.createElement('div',null,'Hello ',this.props.name);
-    }
-});
-ReactDOM.render(React.createElement(HelloMessage,{ name: 'John' }), document.getElementById('app'));
-```
+Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`).
 
-Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to the function calls (i.e. `React.createElement`) first shown in this section.
-
-More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements and it won't run in ES5 browsers with being first transformed by Babel to do so.
+More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements and it won't run in ES5 browsers without first being transformed by Babel.
 
 ## Transforming JSX via Babel in the browser
 
-Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn react.
+Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool, webpack, or SystemJS. And this is the correct way to use React during development. However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn React.
 
 The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e. 5.8.23) that does provide this needed file (i.e `browser.js`) for transforming JSX/ES* in the browser.
 
 ### Using `browser.js` (Babel 5.8.23) to transform JSX in the browser
 
-In the HTML file below the React code we have been working with to create the `HelloMessage` component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the script element running the React code a `type` attribute of `type="text/babel"`.
+In the HTML file below the React code we have been working with to create the `HelloMessage` component has been updated to use JSX. The transformation of the code is occurring because we have included the `browser.js` Babel file and given the script element defining our React code a `type` attribute of `type="text/babel"`.
 
 ```html
 <!DOCTYPE html>
@@ -105,10 +87,10 @@ You should be aware that the code examples used in this book via JSFiddle will b
 
 * The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
 * By using JSX:
-    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar that JavaScript alone.
+    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone.
     * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
     * The compiler will find errors in your HTML you might otherwise miss.
-    * JSX promotes the idea of inline styles. Which can be a very good thing.
+    * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
 * A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
 
